Added Heading for R-peak re aligment

--- a/main.ipynb
+++ b/main.ipynb
@@ -900,6 +900,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30e11bbb",
+   "metadata": {},
+   "source": [
+    "-- R-Peak Alignment and Centering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "629986bf",
