--- a/main.ipynb
+++ b/main.ipynb
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "id": "79918f8b",
    "metadata": {},
    "outputs": [],
@@ -1426,6 +1426,7 @@
     "from utils.rnn_models import ECG_BiLSTM_Classifier\n",
     "from utils.torch_classes import EarlyStopping\n",
     "from utils.train import train_and_eval_model\n",
+    "from utils.logging import log_to_json, log_to_csv\n",
     "\n",
     "import numpy as np\n",
     "import random"
@@ -1434,17 +1435,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8bc815f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATIENCE = 10\n",
-    "DELTA = 0.001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
    "id": "42c39ed4",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1442,8 @@
     "from sklearn.model_selection import ParameterSampler\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    \"optimizer\": [\"Adam\", \"AdamW\"],\n",
+    "    \"optimizer\": [\"Adam\", \"AdamW\", \"SGD\"],\n",
+    "    \"momentum\": np.linspace(0.9,0.999,3).tolist(),\n",
     "    \"batch_size\": [32,64,128],\n",
     "    \"hidden_size\": [32,64,128,256],\n",
     "    \"num_layers\": [1,2,3],\n",
@@ -1466,38 +1457,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "d6c86e37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'weight_decay': 1e-05,\n",
-       "  'optimizer': 'Adam',\n",
-       "  'num_layers': 2,\n",
-       "  'learning_rate': 0.0002782559402207126,\n",
-       "  'hidden_size': 32,\n",
-       "  'dropout': 0.3,\n",
-       "  'batch_size': 64},\n",
-       " {'weight_decay': 1e-05,\n",
-       "  'optimizer': 'Adam',\n",
+       "[{'weight_decay': 0.00031622776601683794,\n",
+       "  'optimizer': 'AdamW',\n",
        "  'num_layers': 3,\n",
-       "  'learning_rate': 0.005994842503189409,\n",
-       "  'hidden_size': 128,\n",
-       "  'dropout': 0.1,\n",
-       "  'batch_size': 32}]"
+       "  'momentum': 0.999,\n",
+       "  'learning_rate': 0.003593813663804626,\n",
+       "  'hidden_size': 64,\n",
+       "  'dropout': 0.3,\n",
+       "  'batch_size': 128}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print 2 configs to visualise what they look like\n",
-    "configs[:2]"
+    "configs[:1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "597b41ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1516,54 +1509,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                             \r"
+      "c:\\Users\\William\\miniconda3\\envs\\neural_networks\\lib\\site-packages\\torch\\nn\\modules\\rnn.py:123: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.3 and num_layers=1\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classes Predicted: tensor([0, 1, 2, 3, 4])\n"
+      "\n",
+      "\n",
+      "-------------- Experiment 2 ----------------\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                             \r"
+      "                                                             "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 / 5\n",
-      "Train Loss:  1.343\n",
-      "Val Loss:  1.335\n",
-      "-------------------------------------------------\n"
+      "\n",
+      "\n",
+      "---------------- All Experiments Completed --------------\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                            \r"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 73\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;66;03m# Create Loss function\u001b[39;00m\n\u001b[0;32m     71\u001b[0m     loss_func \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[1;32m---> 73\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_and_eval_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     74\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     75\u001b[0m \u001b[43m        \u001b[49m\u001b[43mloss_fn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mloss_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     76\u001b[0m \u001b[43m        \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptim\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     77\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     78\u001b[0m \n\u001b[0;32m     79\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrain_dataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[43m        \u001b[49m\u001b[43mval_dataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_dataloader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     81\u001b[0m \u001b[43m        \u001b[49m\n\u001b[0;32m     82\u001b[0m \u001b[43m        \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# small epoch number during this phase\u001b[39;49;00m\n\u001b[0;32m     83\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     85\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     86\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExperiment \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;250m \u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Failed ! : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\William\\Desktop\\Nueral Networks\\Assignment\\Group Project\\utils\\train.py:138\u001b[0m, in \u001b[0;36mtrain_and_eval_model\u001b[1;34m(model, loss_fn, optimizer, train_dataloader, val_dataloader, epochs, device, early_stopper, debug)\u001b[0m\n\u001b[0;32m    129\u001b[0m history \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    130\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_loss\u001b[39m\u001b[38;5;124m\"\u001b[39m: [], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m    131\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_pred\u001b[39m\u001b[38;5;124m\"\u001b[39m: [], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_pred\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m    132\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_true\u001b[39m\u001b[38;5;124m\"\u001b[39m: [], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_true\u001b[39m\u001b[38;5;124m\"\u001b[39m: []\n\u001b[0;32m    133\u001b[0m }\n\u001b[0;32m    135\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs):\n\u001b[0;32m    136\u001b[0m \n\u001b[0;32m    137\u001b[0m     \u001b[38;5;66;03m# -------------- Training Data Per Epoch -----------\u001b[39;00m\n\u001b[1;32m--> 138\u001b[0m     train_data \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    139\u001b[0m \u001b[43m            \u001b[49m\u001b[43mloss_fn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mloss_fn\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    140\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtrain_dataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    141\u001b[0m \u001b[43m            \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    142\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    144\u001b[0m     train_loss \u001b[38;5;241m=\u001b[39m avg_loss(train_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlosses\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m    145\u001b[0m     train_pred \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat(train_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_pred\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "File \u001b[1;32mc:\\Users\\William\\Desktop\\Nueral Networks\\Assignment\\Group Project\\utils\\train.py:38\u001b[0m, in \u001b[0;36mtrain_loop\u001b[1;34m(model, train_dataloader, loss_fn, optimizer, device)\u001b[0m\n\u001b[0;32m     35\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m model(x)\n\u001b[0;32m     36\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_fn(y_pred, y)\n\u001b[1;32m---> 38\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     41\u001b[0m train_losses\u001b[38;5;241m.\u001b[39mappend(loss\u001b[38;5;241m.\u001b[39mitem())\n",
-      "File \u001b[1;32mc:\\Users\\William\\miniconda3\\envs\\neural_networks\\lib\\site-packages\\torch\\_tensor.py:581\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    571\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    572\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    573\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    574\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    579\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    580\u001b[0m     )\n\u001b[1;32m--> 581\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    582\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    583\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\William\\miniconda3\\envs\\neural_networks\\lib\\site-packages\\torch\\autograd\\__init__.py:347\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    342\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    344\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    345\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    346\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 347\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    348\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    349\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    350\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    351\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    352\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    353\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    354\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    355\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\William\\miniconda3\\envs\\neural_networks\\lib\\site-packages\\torch\\autograd\\graph.py:825\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[1;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[0;32m    823\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[0;32m    824\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 825\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Variable\u001b[38;5;241m.\u001b[39m_execution_engine\u001b[38;5;241m.\u001b[39mrun_backward(  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[0;32m    826\u001b[0m         t_outputs, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m    827\u001b[0m     )  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[0;32m    828\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    829\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\r"
      ]
     }
    ],
@@ -1573,7 +1552,14 @@
     "random.seed(42)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
+    "LOG_FOLDER = \"random_search_results\"\n",
+    "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "results_summary_json = []\n",
+    "results_summary_csv = []\n",
+    "\n",
+    "val_f1_metric = F1Score(task=\"multiclass\", num_classes=len(labels), average=\"macro\")\n",
     "\n",
     "for i, params in enumerate(configs):\n",
     "    \n",
@@ -1632,6 +1618,12 @@
     "            optim = torch.optim.AdamW(params=model.parameters(),\n",
     "                                    lr=LEARNING_RATE,\n",
     "                                    weight_decay=WEIGHT_DECAY)\n",
+    "            \n",
+    "        elif OPTIM == \"SGD\":\n",
+    "            optim = torch.optim.SGD(params=model.parameters(),\n",
+    "                                    lr=LEARNING_RATE,\n",
+    "                                    momentum=0.9,\n",
+    "                                    weight_decay=WEIGHT_DECAY)\n",
     "\n",
     "        else: \n",
     "            raise ValueError(f\"Unknown optimizer: {OPTIM}\")\n",
@@ -1649,8 +1641,41 @@
     "            train_dataloader=train_dataloader,\n",
     "            val_dataloader=val_dataloader,\n",
     "            \n",
-    "            epochs=5, # small epoch number during this phase\n",
+    "            epochs=1, # small epoch number during this phase\n",
+    "\n",
+    "            verbose=False,\n",
+    "            debug=False\n",
     "        )\n",
+    "\n",
+    "        final_val_pred = results[\"val_pred\"][-1]\n",
+    "        final_val_true = results[\"val_true\"][-1]\n",
+    "        final_val_f1 = val_f1_metric(final_val_pred.to(device), final_val_true.to(device)).item()\n",
+    "        \n",
+    "        # Update Results Summary\n",
+    "        results_summary_csv.append({\n",
+    "            \"experiment\": i+1,\n",
+    "            **params,\n",
+    "            \"final_train_loss\": results[\"train_loss\"][-1],\n",
+    "            \"final_val_loss\": results[\"val_loss\"][-1],\n",
+    "            \"final_val_f1\": final_val_f1\n",
+    "        })\n",
+    "\n",
+    "\n",
+    "        results_summary_json.append({\n",
+    "            \"experiment\": i + 1,\n",
+    "            \"params\": params,\n",
+    "            \"train_loss\": results['train_loss'],\n",
+    "            \"val_loss\": results['val_loss'],\n",
+    "            \"final_val_f1\": final_val_f1\n",
+    "        }) \n",
+    "\n",
+    "        # Lets log the results\n",
+    "        log_to_csv(filepath=\"random_search_results/bi_LSTM_results.csv\",\n",
+    "            content=results_summary_csv)\n",
+    "\n",
+    "        log_to_json(filepath=\"random_search_results/bi_LSTM_results.json\",\n",
+    "            content=results_summary_json)\n",
+    "\n",
     "        print(\"\\n\")\n",
     "\n",
     "    except Exception as e:\n",
@@ -1663,6 +1688,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d7625508",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0d8f7b8",
    "metadata": {},
    "outputs": [],
    "source": []
