Modified LSTM and GRU

--- a/main.ipynb
+++ b/main.ipynb
@@ -1434,14 +1434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "42c39ed4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import ParameterSampler\n",
     "\n",
-    "hyperparam_grid = {\n",
+    "param_grid = {\n",
+    "    \"model\": [\"BiLSTM\", \"BiGRU\"],\n",
     "    \"optimizer\": [\"Adam\", \"AdamW\", \"SGD\"],\n",
     "    \"momentum\": np.linspace(0.9,0.999,3).tolist(),\n",
     "    \"batch_size\": [32,64,128],\n",
@@ -1452,7 +1453,7 @@
     "    \"learning_rate\": np.logspace(-4,-2,num=10).tolist(),\n",
     "}\n",
     "\n",
-    "configs = list(ParameterSampler(hyperparam_grid, n_iter=2, random_state=42))"
+    "configs = list(ParameterSampler(param_grid, n_iter=2, random_state=42))"
    ]
   },
   {
@@ -1670,10 +1671,10 @@
     "        }) \n",
     "\n",
     "        # Lets log the results\n",
-    "        log_to_csv(filepath=\"random_search_results/bi_LSTM_results.csv\",\n",
+    "        log_to_csv(filepath=\"random_search_results/results.csv\",\n",
     "            content=results_summary_csv)\n",
     "\n",
-    "        log_to_json(filepath=\"random_search_results/bi_LSTM_results.json\",\n",
+    "        log_to_json(filepath=\"random_search_results/results.json\",\n",
     "            content=results_summary_json)\n",
     "\n",
     "        print(\"\\n\")\n",
