Updated EarlyStopping Class

--- a/main.ipynb
+++ b/main.ipynb
@@ -1414,16 +1414,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "79918f8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\William\\miniconda3\\envs\\neural_networks\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
     "from torchmetrics import Accuracy, F1Score\n",
     "\n",
-    "from utils.rnn_models import ECG_BiLSTM_Classifier\n",
+    "from utils.rnn_models import ECG_LSTM_Classifier\n",
+    "from utils.rnn_models import ECG_GRU_Classifier\n",
+    "\n",
     "from utils.torch_classes import EarlyStopping\n",
     "from utils.train import train_and_eval_model\n",
     "from utils.logging import log_to_json, log_to_csv\n",
@@ -1434,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "42c39ed4",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1453,8 @@
     "from sklearn.model_selection import ParameterSampler\n",
     "\n",
     "param_grid = {\n",
-    "    \"model\": [\"BiLSTM\", \"BiGRU\"],\n",
+    "    \"model\": [\"LSTM\", \"GRU\"],\n",
+    "    \"bidirectional\": [True, False],\n",
     "    \"optimizer\": [\"Adam\", \"AdamW\", \"SGD\"],\n",
     "    \"momentum\": np.linspace(0.9,0.999,3).tolist(),\n",
     "    \"batch_size\": [32,64,128],\n",
@@ -1453,29 +1465,34 @@
     "    \"learning_rate\": np.logspace(-4,-2,num=10).tolist(),\n",
     "}\n",
     "\n",
-    "configs = list(ParameterSampler(param_grid, n_iter=2, random_state=42))"
+    "configs = list(ParameterSampler(\n",
+    "    param_grid, \n",
+    "    n_iter=2, \n",
+    "    random_state=42))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "id": "d6c86e37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'weight_decay': 0.00031622776601683794,\n",
+       "[{'weight_decay': 0.0017782794100389228,\n",
        "  'optimizer': 'AdamW',\n",
-       "  'num_layers': 3,\n",
-       "  'momentum': 0.999,\n",
-       "  'learning_rate': 0.003593813663804626,\n",
+       "  'num_layers': 1,\n",
+       "  'momentum': 0.9495,\n",
+       "  'model': 'GRU',\n",
+       "  'learning_rate': 0.0001668100537200059,\n",
        "  'hidden_size': 64,\n",
-       "  'dropout': 0.3,\n",
-       "  'batch_size': 128}]"
+       "  'dropout': 0.5,\n",
+       "  'bidirectional': True,\n",
+       "  'batch_size': 64}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,14 +1501,6 @@
     "# Print 2 configs to visualise what they look like\n",
     "configs[:1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "597b41ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1642,7 +1651,11 @@
     "            train_dataloader=train_dataloader,\n",
     "            val_dataloader=val_dataloader,\n",
     "            \n",
-    "            epochs=1, # small epoch number during this phase\n",
+    "            epochs=20, # small epoch number during this phase\n",
+    "            early_stopper= EarlyStopping(\n",
+    "                patience=5, \n",
+    "                delta=0.001,\n",
+    "                checkpoint_path=f\"{LOG_FOLDER}/checkpoints/experiment_{i+1}.pt\"),\n",
     "\n",
     "            verbose=False,\n",
     "            debug=False\n",
