--- a/main.ipynb
+++ b/main.ipynb
@@ -1414,19 +1414,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "79918f8b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\William\\miniconda3\\envs\\neural_networks\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
@@ -1436,7 +1427,7 @@
     "from utils.rnn_models import ECG_GRU_Classifier\n",
     "\n",
     "from utils.torch_classes import EarlyStopping\n",
-    "from utils.train import train_and_eval_model\n",
+    "from utils.train import train_and_eval_model, val_loop\n",
     "from utils.logging import log_to_json, log_to_csv\n",
     "\n",
     "import numpy as np\n",
@@ -1563,6 +1554,7 @@
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "LOG_FOLDER = \"random_search_results\"\n",
+    "EPOCHS = 20\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
@@ -1588,6 +1580,7 @@
     "        LEARNING_RATE = params[\"learning_rate\"]\n",
     "        WEIGHT_DECAY = params[\"weight_decay\"]\n",
     "\n",
+    "# ----------------------------------------------------\n",
     "        # We need to recreate the data loaders \n",
     "        train_dataloader = DataLoader(\n",
     "            dataset=train_dataset,\n",
@@ -1608,16 +1601,27 @@
     "            shuffle=False\n",
     "        )\n",
     "\n",
+    "# ----------------------------------------------------\n",
     "        # Create the Model \n",
-    "        model = ECG_BiLSTM_Classifier(\n",
-    "            input_size=INPUT_SIZE,\n",
-    "            hidden_size=HIDDEN_SIZE,\n",
-    "            num_layers=NUM_LAYERS,\n",
-    "            num_classes=NUM_CLASSES,\n",
-    "            dropout=DROPOUT\n",
-    "        )\n",
-    "        model.to(device)\n",
+    "        if params[\"model\"] == \"BiLSTM\":\n",
+    "            model = ECG_LSTM_Classifier(\n",
+    "                input_size=INPUT_SIZE,\n",
+    "                hidden_size=HIDDEN_SIZE,\n",
+    "                num_layers=NUM_LAYERS,\n",
+    "                num_classes=NUM_CLASSES,\n",
+    "                dropout=DROPOUT\n",
+    "            )\n",
     "\n",
+    "        elif params[\"model\"] == \"BiGRU\":\n",
+    "            model = ECG_GRU_Classifier(\n",
+    "                input_size=INPUT_SIZE,\n",
+    "                hidden_size=HIDDEN_SIZE,\n",
+    "                num_layers=NUM_LAYERS,\n",
+    "                num_classes=NUM_CLASSES,\n",
+    "                dropout=DROPOUT\n",
+    "            )\n",
+    "        model.to(device)\n",
+    "# ----------------------------------------------------\n",
     "        # Create the optimiers \n",
     "        if OPTIM == \"Adam\":\n",
     "            optim = torch.optim.Adam(params=model.parameters(),\n",
@@ -1637,10 +1641,18 @@
     "\n",
     "        else: \n",
     "            raise ValueError(f\"Unknown optimizer: {OPTIM}\")\n",
-    "\n",
+    "# ----------------------------------------------------\n",
     "\n",
     "        # Create Loss function\n",
     "        loss_func = nn.CrossEntropyLoss()\n",
+    "\n",
+    "        # Create Early Stopper\n",
+    "        early_stopper = EarlyStopping(\n",
+    "                patience=5, \n",
+    "                delta=0.001,\n",
+    "                checkpoint_path=f\"{LOG_FOLDER}/checkpoints/experiment_{i+1}.pt\")\n",
+    "\n",
+    "# ----------------------------------------------------\n",
     "\n",
     "        results = train_and_eval_model(\n",
     "            model=model, \n",
@@ -1651,27 +1663,37 @@
     "            train_dataloader=train_dataloader,\n",
     "            val_dataloader=val_dataloader,\n",
     "            \n",
-    "            epochs=20, # small epoch number during this phase\n",
-    "            early_stopper= EarlyStopping(\n",
-    "                patience=5, \n",
-    "                delta=0.001,\n",
-    "                checkpoint_path=f\"{LOG_FOLDER}/checkpoints/experiment_{i+1}.pt\"),\n",
+    "            epochs=EPOCHS, # small epoch number during this phase\n",
+    "            early_stopper= early_stopper,\n",
     "\n",
     "            verbose=False,\n",
     "            debug=False\n",
     "        )\n",
     "\n",
-    "        final_val_pred = results[\"val_pred\"][-1]\n",
-    "        final_val_true = results[\"val_true\"][-1]\n",
-    "        final_val_f1 = val_f1_metric(final_val_pred.to(device), final_val_true.to(device)).item()\n",
+    "# ----------------------------------------------------\n",
+    "        # We calculate the F1 score \n",
+    "        best_val_f1 = 0\n",
+    "        model.load_state_dict(torch.load(early_stopper.checkpoint_path, map_location=device)[\"model_state_dict\"])\n",
+    "        best_val_data = val_loop(model=model, \n",
+    "                                 val_dataloader=val_dataloader,\n",
+    "                                 loss_fn=loss_func, \n",
+    "                                 device=device)\n",
     "        \n",
+    "        best_val_pred = torch.cat(best_val_data[\"y_pred\"])\n",
+    "        best_val_true = torch.cat(best_val_data[\"y_true\"])\n",
+    "        best_val_f1 = val_f1_metric(best_val_pred.to(device),best_val_true.to(device)).item()\n",
+    "        \n",
+    "# ----------------------------------------------------\n",
     "        # Update Results Summary\n",
     "        results_summary_csv.append({\n",
     "            \"experiment\": i+1,\n",
     "            **params,\n",
+    "            \"epochs run\": len(results[\"train_loss\"]),\n",
+    "            \"total epochs\": EPOCHS,\n",
     "            \"final_train_loss\": results[\"train_loss\"][-1],\n",
     "            \"final_val_loss\": results[\"val_loss\"][-1],\n",
-    "            \"final_val_f1\": final_val_f1\n",
+    "            \"val_loss_min\": early_stopper.val_loss_min,\n",
+    "            \"best_val_f1\": best_val_f1\n",
     "        })\n",
     "\n",
     "\n",
@@ -1680,7 +1702,8 @@
     "            \"params\": params,\n",
     "            \"train_loss\": results['train_loss'],\n",
     "            \"val_loss\": results['val_loss'],\n",
-    "            \"final_val_f1\": final_val_f1\n",
+    "            \"val_loss_min\": early_stopper.val_loss_min,\n",
+    "            \"best_val_f1\": best_val_f1\n",
     "        }) \n",
     "\n",
     "        # Lets log the results\n",
@@ -1701,15 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7625508",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0d8f7b8",
+   "id": "e8aaa6bd",
    "metadata": {},
    "outputs": [],
    "source": []
