--- a/main.ipynb
+++ b/main.ipynb
@@ -1436,12 +1436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "42c39ed4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import ParameterSampler\n",
+    "\n",
+    "EXPERIMENTS = 100\n",
     "\n",
     "param_grid = {\n",
     "    \"model\": [\"LSTM\", \"GRU\"],\n",
@@ -1458,7 +1460,7 @@
     "\n",
     "configs = list(ParameterSampler(\n",
     "    param_grid, \n",
-    "    n_iter=2, \n",
+    "    n_iter=EXPERIMENTS, \n",
     "    random_state=42))"
    ]
   },
@@ -1554,7 +1556,7 @@
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "LOG_FOLDER = \"random_search_results\"\n",
-    "EPOCHS = 20\n",
+    "EPOCHS = 15\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
@@ -1577,6 +1579,7 @@
     "        NUM_CLASSES = len(labels)\n",
     "        DROPOUT = params[\"dropout\"]\n",
     "\n",
+    "        MOMENTUM = params[\"momentum\"]\n",
     "        LEARNING_RATE = params[\"learning_rate\"]\n",
     "        WEIGHT_DECAY = params[\"weight_decay\"]\n",
     "\n",
@@ -1603,7 +1606,7 @@
     "\n",
     "# ----------------------------------------------------\n",
     "        # Create the Model \n",
-    "        if params[\"model\"] == \"BiLSTM\":\n",
+    "        if params[\"model\"] == \"LSTM\":\n",
     "            model = ECG_LSTM_Classifier(\n",
     "                input_size=INPUT_SIZE,\n",
     "                hidden_size=HIDDEN_SIZE,\n",
@@ -1612,7 +1615,7 @@
     "                dropout=DROPOUT\n",
     "            )\n",
     "\n",
-    "        elif params[\"model\"] == \"BiGRU\":\n",
+    "        elif params[\"model\"] == \"GRU\":\n",
     "            model = ECG_GRU_Classifier(\n",
     "                input_size=INPUT_SIZE,\n",
     "                hidden_size=HIDDEN_SIZE,\n",
@@ -1636,7 +1639,7 @@
     "        elif OPTIM == \"SGD\":\n",
     "            optim = torch.optim.SGD(params=model.parameters(),\n",
     "                                    lr=LEARNING_RATE,\n",
-    "                                    momentum=0.9,\n",
+    "                                    momentum=MOMENTUM,\n",
     "                                    weight_decay=WEIGHT_DECAY)\n",
     "\n",
     "        else: \n",
@@ -1649,8 +1652,9 @@
     "        # Create Early Stopper\n",
     "        early_stopper = EarlyStopping(\n",
     "                patience=5, \n",
-    "                delta=0.001,\n",
-    "                checkpoint_path=f\"{LOG_FOLDER}/checkpoints/experiment_{i+1}.pt\")\n",
+    "                delta=0,\n",
+    "                checkpoint_path=f\"{LOG_FOLDER}/checkpoints/experiment_{i+1}.pt\",\n",
+    "                verbose=False)\n",
     "\n",
     "# ----------------------------------------------------\n",
     "\n",
