Minor fix in F1 Metric

--- a/main.ipynb
+++ b/main.ipynb
@@ -1563,7 +1563,7 @@
     "results_summary_json = []\n",
     "results_summary_csv = []\n",
     "\n",
-    "val_f1_metric = F1Score(task=\"multiclass\", num_classes=len(labels), average=\"macro\")\n",
+    "val_f1_metric = F1Score(task=\"multiclass\", num_classes=len(labels), average=\"macro\").to(device)\n",
     "\n",
     "for i, params in enumerate(configs):\n",
     "    \n",
