Update to Random Search - Added more Metics

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f53e3f46",
+   "metadata": {},
+   "source": [
+    "**GitHub**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12def0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !git clone https://github.com/williamjohn972/Deep-Learning-for-ECG-Heartbeat-Classification.git\n",
+    "# %cd Deep-Learning-for-ECG-Heartbeat-Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5ad21685",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install neurokit2 torchmetrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24c29be4",
    "metadata": {},
    "source": [
@@ -188,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1fec6098",
    "metadata": {},
    "outputs": [
@@ -247,7 +276,7 @@
     "plot_unique_class_samples(X_train,y_train,num_samples=1,\n",
     "                          xlabel=\"Time Index\",\n",
     "                          ylabel=\"Amplitude\",\n",
-    "                          figsize=(10,5))"
+    "                          figsize=(8,4))"
    ]
   },
   {
@@ -313,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0360faeb",
    "metadata": {},
    "outputs": [
@@ -332,13 +361,13 @@
     "\n",
     "    X_train_preprocessed[i] = apply_low_pass_filter(sample=X_sample,\n",
     "                          sampling_frequency=125,\n",
-    "                          cutoff_frequency=20)\n",
+    "                          cutoff_frequency=25)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "31671771",
    "metadata": {},
    "outputs": [
@@ -397,7 +426,7 @@
     "plot_unique_class_samples(X_train_preprocessed,y_train,num_samples=1,\n",
     "                          xlabel=\"Time Index\",\n",
     "                          ylabel=\"Amplitude\",\n",
-    "                          figsize=(10,5))"
+    "                          figsize=(8,4))"
    ]
   },
   {
@@ -787,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "f6b4ba87",
    "metadata": {},
    "outputs": [
@@ -846,7 +875,7 @@
     "plot_unique_class_samples(X_train_preprocessed,y_train,num_samples=1,\n",
     "                          xlabel=\"Time Index\",\n",
     "                          ylabel=\"Amplitude\",\n",
-    "                          figsize=(10,5))"
+    "                          figsize=(8,4))"
    ]
   },
   {
@@ -1097,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "a4a0dba7",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1185,7 @@
     "plot_unique_class_samples(X_train_preprocessed,y_train,num_samples=1,\n",
     "                          xlabel=\"Time Index\",\n",
     "                          ylabel=\"Amplitude\",\n",
-    "                          figsize=(10,5))"
+    "                          figsize=(8,4))"
    ]
   },
   {
@@ -1374,12 +1403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "fbb62412",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.rnn_models import ECG_BiLSTM_Classifier\n",
     "from utils.torch_classes import ECG_Dataset"
    ]
   },
@@ -1414,14 +1442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "79918f8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchmetrics import Accuracy, F1Score\n",
+    "from torchmetrics import F1Score, AUROC, Precision, Recall\n",
     "\n",
     "from utils.rnn_models import ECG_LSTM_Classifier\n",
     "from utils.rnn_models import ECG_GRU_Classifier\n",
@@ -1563,11 +1591,21 @@
     "results_summary_json = []\n",
     "results_summary_csv = []\n",
     "\n",
+    "val_precision_metric = Precision(task=\"multiclass\", num_classes=len(labels), average=\"macro\").to(device)\n",
+    "val_recall_metric = Recall(task=\"multiclass\", num_classes=len(labels), average=\"macro\").to(device)\n",
     "val_f1_metric = F1Score(task=\"multiclass\", num_classes=len(labels), average=\"macro\").to(device)\n",
+    "val_auc_metric = AUROC(task=\"multiclass\", num_classes=len(labels), average=\"macro\").to(device)\n",
     "\n",
     "for i, params in enumerate(configs):\n",
-    "    \n",
+    "\n",
+    "  \n",
     "    try: \n",
+    "        # RESET METRICS\n",
+    "        val_precision_metric.reset()\n",
+    "        val_recall_metric.reset()\n",
+    "        val_f1_metric.reset()\n",
+    "        val_auc_metric.reset()\n",
+    "\n",
     "        print(f\"-------------- Experiment {i + 1} ----------------\")\n",
     "\n",
     "        BATCH_SIZE = params['batch_size']\n",
@@ -1578,10 +1616,15 @@
     "        NUM_LAYERS = params[\"num_layers\"]\n",
     "        NUM_CLASSES = len(labels)\n",
     "        DROPOUT = params[\"dropout\"]\n",
+    "        BIDIRECTIONAL = params[\"bidirectional\"]\n",
     "\n",
     "        MOMENTUM = params[\"momentum\"]\n",
     "        LEARNING_RATE = params[\"learning_rate\"]\n",
     "        WEIGHT_DECAY = params[\"weight_decay\"]\n",
+    "\n",
+    "        MODEL = params['model']\n",
+    "\n",
+    "        print(f\"Model: {BIDIRECTIONAL} {MODEL}\")\n",
     "\n",
     "# ----------------------------------------------------\n",
     "        # We need to recreate the data loaders \n",
@@ -1606,22 +1649,24 @@
     "\n",
     "# ----------------------------------------------------\n",
     "        # Create the Model \n",
-    "        if params[\"model\"] == \"LSTM\":\n",
+    "        if MODEL == \"LSTM\":\n",
     "            model = ECG_LSTM_Classifier(\n",
     "                input_size=INPUT_SIZE,\n",
     "                hidden_size=HIDDEN_SIZE,\n",
     "                num_layers=NUM_LAYERS,\n",
     "                num_classes=NUM_CLASSES,\n",
-    "                dropout=DROPOUT\n",
+    "                dropout=DROPOUT,\n",
+    "                bidirectional=BIDIRECTIONAL\n",
     "            )\n",
     "\n",
-    "        elif params[\"model\"] == \"GRU\":\n",
+    "        elif MODEL == \"GRU\":\n",
     "            model = ECG_GRU_Classifier(\n",
     "                input_size=INPUT_SIZE,\n",
     "                hidden_size=HIDDEN_SIZE,\n",
     "                num_layers=NUM_LAYERS,\n",
     "                num_classes=NUM_CLASSES,\n",
-    "                dropout=DROPOUT\n",
+    "                dropout=DROPOUT,\n",
+    "                bidirectional=BIDIRECTIONAL\n",
     "            )\n",
     "        model.to(device)\n",
     "# ----------------------------------------------------\n",
@@ -1657,7 +1702,7 @@
     "                verbose=False)\n",
     "\n",
     "# ----------------------------------------------------\n",
-    "\n",
+    "        start = time()\n",
     "        results = train_and_eval_model(\n",
     "            model=model, \n",
     "            loss_fn=loss_func,\n",
@@ -1673,10 +1718,14 @@
     "            verbose=False,\n",
     "            debug=False\n",
     "        )\n",
+    "        end = time()\n",
+    "\n",
+    "        epochs_run = len(results[\"train_loss\"])\n",
+    "\n",
+    "        total_time = (end-start)\n",
+    "        time_per_epoch = total_time/epochs_run if epochs_run > 0 else 0 # (i+1) is the current epoch\n",
     "\n",
     "# ----------------------------------------------------\n",
-    "        # We calculate the F1 score \n",
-    "        best_val_f1 = 0\n",
     "        model.load_state_dict(torch.load(early_stopper.checkpoint_path, map_location=device)[\"model_state_dict\"])\n",
     "        best_val_data = val_loop(model=model, \n",
     "                                 val_dataloader=val_dataloader,\n",
@@ -1685,19 +1734,35 @@
     "        \n",
     "        best_val_pred = torch.cat(best_val_data[\"y_pred\"])\n",
     "        best_val_true = torch.cat(best_val_data[\"y_true\"])\n",
+    "\n",
+    "        # Calculate Precision\n",
+    "        best_val_precision = val_precision_metric(best_val_pred.to(device), best_val_true.to(device)).item()\n",
+    "        best_val_recall = val_recall_metric(best_val_pred.to(device), best_val_true.to(device)).item()\n",
+    "\n",
+    "        # Calculate Recall\n",
+    "\n",
+    "        # Calculate the F1 score \n",
     "        best_val_f1 = val_f1_metric(best_val_pred.to(device),best_val_true.to(device)).item()\n",
     "        \n",
+    "        # Calculate the AUC\n",
+    "        best_val_auc = val_auc_metric(best_val_pred.to(device),best_val_true.to(device)).item()\n",
+    "\n",
     "# ----------------------------------------------------\n",
     "        # Update Results Summary\n",
     "        results_summary_csv.append({\n",
     "            \"experiment\": i+1,\n",
     "            **params,\n",
-    "            \"epochs run\": len(results[\"train_loss\"]),\n",
+    "            \"epochs run\": epochs_run,\n",
     "            \"total epochs\": EPOCHS,\n",
     "            \"final_train_loss\": results[\"train_loss\"][-1],\n",
     "            \"final_val_loss\": results[\"val_loss\"][-1],\n",
-    "            \"val_loss_min\": early_stopper.val_loss_min,\n",
-    "            \"best_val_f1\": best_val_f1\n",
+    "            \"min_val_loss\": early_stopper.val_loss_min,\n",
+    "            \"best_val_precision\": best_val_precision,\n",
+    "            \"best_val_recall\": best_val_recall,\n",
+    "            \"best_val_f1\": best_val_f1,\n",
+    "            \"best_val_auc\": best_val_auc,\n",
+    "            \"total_time\": total_time,\n",
+    "            \"time_per_epoch\": time_per_epoch\n",
     "        })\n",
     "\n",
     "\n",
@@ -1705,9 +1770,7 @@
     "            \"experiment\": i + 1,\n",
     "            \"params\": params,\n",
     "            \"train_loss\": results['train_loss'],\n",
-    "            \"val_loss\": results['val_loss'],\n",
-    "            \"val_loss_min\": early_stopper.val_loss_min,\n",
-    "            \"best_val_f1\": best_val_f1\n",
+    "            \"val_loss\": results['val_loss']\n",
     "        }) \n",
     "\n",
     "        # Lets log the results\n",
@@ -1716,6 +1779,11 @@
     "\n",
     "        log_to_json(filepath=\"random_search_results/results.json\",\n",
     "            content=results_summary_json)\n",
+    "        \n",
+    "        print(f\"Epochs Run: {epochs_run} / {EPOCHS} ({early_stopper.early_stop})\")\n",
+    "        print(f\"Total Time: {total_time:.3f} s\")\n",
+    "        print(f\"Average Time Per Epoch: {time_per_epoch:.3f} s\")\n",
+    "        print(f\"Best F1 Score: {best_val_f1:.3f}| Best AUC Score: {best_val_auc:.3f}\")\n",
     "\n",
     "        print(\"\\n\")\n",
     "\n",
