--- a/main.ipynb
+++ b/main.ipynb
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "79918f8b",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1459,8 @@
     "from utils.logging import log_to_json, log_to_csv\n",
     "\n",
     "import numpy as np\n",
-    "import random"
+    "import random\n",
+    "import time"
    ]
   },
   {
@@ -1783,7 +1784,7 @@
     "        print(f\"Epochs Run: {epochs_run} / {EPOCHS} ({early_stopper.early_stop})\")\n",
     "        print(f\"Total Time: {total_time:.3f} s\")\n",
     "        print(f\"Average Time Per Epoch: {time_per_epoch:.3f} s\")\n",
-    "        print(f\"Best F1 Score: {best_val_f1:.3f}| Best AUC Score: {best_val_auc:.3f}\")\n",
+    "        print(f\"Min Val Loss: {early_stopper.val_loss_min:.3f} | Best F1 Score: {best_val_f1:.3f}| Best AUC Score: {best_val_auc:.3f}\")\n",
     "\n",
     "        print(\"\\n\")\n",
     "\n",
