Cleaned main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "id": "ca6311e6",
    "metadata": {},
    "outputs": [],
@@ -2245,7 +2245,6 @@
     "    sample_freq=125,\n",
     "    cutoff_freq=25,\n",
     "    target_r_peak_index=94,\n",
-    "    class_weights=class_weights\n",
     ")"
    ]
   },
@@ -2273,8 +2272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "199fa894",
+   "execution_count": null,
+   "id": "d0b0cb11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2288,7 +2287,7 @@
     "class_weights = data[\"class_weights\"]\n",
     "\n",
     "# assign the weights to all of y_train\n",
-    "train_sample_weights = np.array(class_weights)[y_train]\n",
+    "train_sample_weights = np.array(class_weights)[y]\n",
     "\n",
     "train_sample_weights = torch.from_numpy(train_sample_weights).float()\n",
     "\n",
@@ -2485,37 +2484,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c86e37",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'weight_decay': 0.0017782794100389228,\n",
-       "  'optimizer': 'AdamW',\n",
-       "  'num_layers': 1,\n",
-       "  'momentum': 0.9495,\n",
-       "  'model': 'GRU',\n",
-       "  'learning_rate': 0.0001668100537200059,\n",
-       "  'hidden_size': 64,\n",
-       "  'dropout': 0.5,\n",
-       "  'bidirectional': True,\n",
-       "  'batch_size': 64}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print 2 configs to visualise what they look like\n",
-    "configs[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "749fb69e",
    "metadata": {},
    "outputs": [],
@@ -2578,12 +2546,6 @@
     "\n",
     "        val_dataloader = DataLoader(\n",
     "            dataset=val_dataset,\n",
-    "            batch_size=BATCH_SIZE,\n",
-    "            shuffle=False\n",
-    "        )\n",
-    "\n",
-    "        test_dataloader = DataLoader(\n",
-    "            dataset= test_dataset,\n",
     "            batch_size=BATCH_SIZE,\n",
     "            shuffle=False\n",
     "        )\n",
@@ -2734,282 +2696,6 @@
     "        print(f\"Experiment {i + 1} Failed ! : {e}\")\n",
     "\n",
     "print(\"---------------- All Experiments Completed --------------\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "21bbbf37",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>9.779411554336547852e-01</th>\n",
-       "      <th>9.264705777168273926e-01</th>\n",
-       "      <th>6.813725233078002930e-01</th>\n",
-       "      <th>2.450980395078659058e-01</th>\n",
-       "      <th>1.544117629528045654e-01</th>\n",
-       "      <th>1.911764740943908691e-01</th>\n",
-       "      <th>1.519607901573181152e-01</th>\n",
-       "      <th>8.578431606292724609e-02</th>\n",
-       "      <th>5.882352963089942932e-02</th>\n",
-       "      <th>4.901960864663124084e-02</th>\n",
-       "      <th>...</th>\n",
-       "      <th>0.000000000000000000e+00.79</th>\n",
-       "      <th>0.000000000000000000e+00.80</th>\n",
-       "      <th>0.000000000000000000e+00.81</th>\n",
-       "      <th>0.000000000000000000e+00.82</th>\n",
-       "      <th>0.000000000000000000e+00.83</th>\n",
-       "      <th>0.000000000000000000e+00.84</th>\n",
-       "      <th>0.000000000000000000e+00.85</th>\n",
-       "      <th>0.000000000000000000e+00.86</th>\n",
-       "      <th>0.000000000000000000e+00.87</th>\n",
-       "      <th>0.000000000000000000e+00.88</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.960114</td>\n",
-       "      <td>0.863248</td>\n",
-       "      <td>0.461538</td>\n",
-       "      <td>0.196581</td>\n",
-       "      <td>0.094017</td>\n",
-       "      <td>0.125356</td>\n",
-       "      <td>0.099715</td>\n",
-       "      <td>0.088319</td>\n",
-       "      <td>0.074074</td>\n",
-       "      <td>0.082621</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 188 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   9.779411554336547852e-01  9.264705777168273926e-01  \\\n",
-       "0                  0.960114                  0.863248   \n",
-       "\n",
-       "   6.813725233078002930e-01  2.450980395078659058e-01  \\\n",
-       "0                  0.461538                  0.196581   \n",
-       "\n",
-       "   1.544117629528045654e-01  1.911764740943908691e-01  \\\n",
-       "0                  0.094017                  0.125356   \n",
-       "\n",
-       "   1.519607901573181152e-01  8.578431606292724609e-02  \\\n",
-       "0                  0.099715                  0.088319   \n",
-       "\n",
-       "   5.882352963089942932e-02  4.901960864663124084e-02  ...  \\\n",
-       "0                  0.074074                  0.082621  ...   \n",
-       "\n",
-       "   0.000000000000000000e+00.79  0.000000000000000000e+00.80  \\\n",
-       "0                          0.0                          0.0   \n",
-       "\n",
-       "   0.000000000000000000e+00.81  0.000000000000000000e+00.82  \\\n",
-       "0                          0.0                          0.0   \n",
-       "\n",
-       "   0.000000000000000000e+00.83  0.000000000000000000e+00.84  \\\n",
-       "0                          0.0                          0.0   \n",
-       "\n",
-       "   0.000000000000000000e+00.85  0.000000000000000000e+00.86  \\\n",
-       "0                          0.0                          0.0   \n",
-       "\n",
-       "   0.000000000000000000e+00.87  0.000000000000000000e+00.88  \n",
-       "0                          0.0                          0.0  \n",
-       "\n",
-       "[1 rows x 188 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import neurokit2 as nk\n",
-    "from utils.preprocessing import apply_low_pass_filter, z_score_normalization\n",
-    "\n",
-    "train = pd.read_csv(\"data/mitbih_train.csv\")\n",
-    "train.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "8c63d50a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = train.iloc[0]\n",
-    "sample = apply_low_pass_filter(sample,125,25,order=4)\n",
-    "sample = (sample - sample.mean()) / sample.std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "a240d72c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(5.585518586937145)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "2853a801",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(     ECG_R_Peaks\n",
-       " 0              0\n",
-       " 1              0\n",
-       " 2              0\n",
-       " 3              0\n",
-       " 4              0\n",
-       " ..           ...\n",
-       " 183            0\n",
-       " 184            0\n",
-       " 185            0\n",
-       " 186            0\n",
-       " 187            0\n",
-       " \n",
-       " [188 rows x 1 columns],\n",
-       " {'method_peaks': 'neurokit',\n",
-       "  'method_fixpeaks': 'None',\n",
-       "  'ECG_R_Peaks': array([115]),\n",
-       "  'sampling_rate': 125})"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nk.ecg_peaks(sampling_rate=125, method=\"neurokit\", ecg_cleaned = sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "ff8a6dd5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(5.503116125486192)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample[115]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "bd5361ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.0)"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.iloc[0].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "ac49c3fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average min per row: 4.087550236675554e-05\n",
-      "Average max per row: 0.999737261426895\n",
-      "Average min per column: 0.0\n",
-      "Average max per column: 1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "X = train.iloc[:, :-1].values\n",
-    "\n",
-    "# Check across all rows\n",
-    "row_mins = X.min(axis=1)\n",
-    "row_maxs = X.max(axis=1)\n",
-    "\n",
-    "print(\"Average min per row:\", row_mins.mean())\n",
-    "print(\"Average max per row:\", row_maxs.mean())\n",
-    "\n",
-    "# Check across columns\n",
-    "col_mins = X.min(axis=0)\n",
-    "col_maxs = X.max(axis=0)\n",
-    "\n",
-    "print(\"Average min per column:\", col_mins.mean())\n",
-    "print(\"Average max per column:\", col_maxs.mean())\n"
    ]
   },
   {
