Reuploading RNN.ipynb

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 9,
       "id": "969c0f0f",
       "metadata": {
         "id": "969c0f0f"
@@ -2506,7 +2506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "aaYUqCAsNmKs",
       "metadata": {
         "colab": {
@@ -2529,21 +2529,26 @@
         "id": "aaYUqCAsNmKs",
         "outputId": "d36e7f0b-9838-4f67-a7c5-2c5826d0a173"
       },
+      "outputs": [],
+      "source": [
+        "model.load_state_dict(torch.load(\"models/best_GRU.pt\", map_location=device)[\"model_state_dict\"])\n",
+        "model.to(device)\n",
+        "\n",
+        "test_results = test_loop(model,test_dataloader,device)\n",
+        "\n",
+        "test_pred = test_results[\"y_pred\"]\n",
+        "test_true = test_results[\"y_true\"]\n",
+        "test_pred_logits = test_results[\"y_pred_logits\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "id": "8bO2jlBvS54U",
+      "metadata": {
+        "id": "8bO2jlBvS54U"
+      },
       "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1fbbbcaf94604fa3951abfb8cddb1883",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Testing:   0%|          | 0/343 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -2564,15 +2569,6 @@
         }
       ],
       "source": [
-        "model.load_state_dict(torch.load(\"models/best_GRU.pt\")[\"model_state_dict\"])\n",
-        "model.to(device)\n",
-        "\n",
-        "test_results = test_loop(model,test_dataloader,device)\n",
-        "\n",
-        "test_pred = test_results[\"y_pred\"]\n",
-        "test_true = test_results[\"y_true\"]\n",
-        "test_pred_logits = test_results[\"y_pred_logits\"]\n",
-        "\n",
         "labels_list = ['N', 'S', 'V', 'F', 'Q']\n",
         "print(classification_report(\n",
         "    test_true,\n",
@@ -2585,10 +2581,8 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "8bO2jlBvS54U",
-      "metadata": {
-        "id": "8bO2jlBvS54U"
-      },
+      "id": "79fabc7b",
+      "metadata": {},
       "outputs": [],
       "source": []
     }
