--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2595,7 +2595,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "neural_networks",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
